add filters to swag/ fix exercise/
