# routes/api/exercises.js
@@ -10,7 +10,7 @@ router.get("/", auth, ctrl.getAllExercises);
 
 
 
-router.delete("/", auth, ctrl.deleteExercise);
+router.delete("/del", auth, ctrl.deleteExercise);
 router.post("/", auth, validateBody(schemas.addExerciseSchema), ctrl.createExercise);
 router.patch("/:id", auth, validateBody(schemas.updateExerciseSchema));
 
