# routes/api/filters.js
@@ -1,6 +1,5 @@
 const express = require("express");
 const router = express.Router();
-const { schemas } = require("../../models/exercise");
 const { auth } = require("../../middlewares");
 const ctrl = require("../../controllers/filters");
 router.get("/", auth, ctrl.getAllFilters);
